--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	</head>
 	<body id="sanity-check">
     <input type="text" placeholder="search gifs">
-    <div id='gif-gallery'></div>
+    <p id='gif-gallery'></p>
     <button>MOAR</button>
 	</body>
 </html>
