--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
 	</head>
 	<body id="sanity-check">
     <input type="text" placeholder="search gifs">
+    <div class = "gif"></div>
 	</body>
 </html>
