--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
     <script src="base.js"></script>
 	</head>
 	<body id="sanity-check">
-	<form method="POST" action="/page">
-		<label for="search">search gifs</label>
-		<input id="search" type="text" name="search" placeholder="search gifs"/>
-		<input type="submit" value="search" />
+	<form method="GET">
+		<label for="gifsearch"></label>
+		<input id="gifsearch" type="text" placeholder="search gifs"/>
 	</form>
     <div class="gif">
     </div>
